// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-0" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            common: {
                chunks: 'initial',
                enforce: true,
                name: 'common'
            },

            vendor: {
                chunks: 'initial',
                enforce: true,
                name: 'vendor',
                test: '/node_modules/'
            },

            minChunks: 2
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-1" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            common: {
                chunks: 'initial',
                enforce: true,
                name: 'common'
            },

            vendor: {
                chunks: 'initial',
                enforce: true,
                name: 'vendor',
                test: '/node_modules/'
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-2" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            vendor: {
                chunks: 'initial',
                enforce: true,
                name: 'vendor',
                test: '/node_modules/'
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-3" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            commons: {
                chunks: 'initial',
                enforce: true,
                name: 'commons'
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-4" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            main: {
                chunks: 'initial',
                enforce: true,
                name: 'main'
            },

            chunks: 'initial',
            enforce: true,
            name: true,
            minSize: 0,
            minChunks: 2
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-5" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            runtimeChunk: true
        }
    }
}
"
`;
